--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,3 +1,11 @@
+# Automatically create moc files
+set(CMAKE_AUTOMOC ON)
+
+find_package(Qt5Core REQUIRED)
+find_package(Qt5Gui REQUIRED)
+find_package(Qt5Qml REQUIRED)
+find_package(Qt5Quick REQUIRED)
+
 file(GLOB QML_JS_FILES *.qml *.js)
 file(GLOB APP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.qml *.js *.json)
 
@@ -7,6 +15,22 @@ add_subdirectory(ui)
 # Make the files visible on qtcreator
 add_custom_target(nosonapp_QMlFiles ALL SOURCES ${APP_FILES})
 
-install(FILES ${QML_JS_FILES} DESTINATION ${NOSONAPP_DIR})
-install(DIRECTORY "graphics" DESTINATION ${NOSONAPP_DIR})
+set(
+  noson-gui-sources
+  noson.cpp
+  signalhandler.cpp
+  signalhandler.h
+  diskcache/diskcachefactory.cpp
+  diskcache/diskcachefactory.h
+  diskcache/cachingnetworkaccessmanager.cpp
+  diskcache/cachingnetworkaccessmanager.h
+  diskcache/cachereply.cpp
+  diskcache/cachereply.h
+)
 
+qt5_add_resources(noson-gui-resources noson.qrc)
+add_executable(noson-gui ${noson-gui-sources} ${noson-gui-resources})
+qt5_use_modules(noson-gui Gui Qml Quick)
+
+install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/noson-gui
+        DESTINATION ${PLUGINS_DIR})
