indentation in cmake script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ set(DESKTOP_FILE_NAME "noson.desktop")
 
 # Components PATH
 execute_process(
-    COMMAND dpkg-architecture -qDEB_HOST_MULTIARCH
-    OUTPUT_VARIABLE ARCH_TRIPLET
-    OUTPUT_STRIP_TRAILING_WHITESPACE
+  COMMAND dpkg-architecture -qDEB_HOST_MULTIARCH
+  OUTPUT_VARIABLE ARCH_TRIPLET
+  OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
 set(LIBDIR "lib/${ARCH_TRIPLET}")
@@ -29,48 +29,46 @@ set(PLUGINS_DIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/${APP_NAME}")
 set(NOSON_GUI "${PLUGINS_DIR}/noson-gui")
 
 configure_file(
-    ${EXEC}.in
-    ${CMAKE_CURRENT_BINARY_DIR}/${EXEC}
+  ${EXEC}.in
+  ${CMAKE_CURRENT_BINARY_DIR}/${EXEC}
 )
 
 install(
-    FILES "${CMAKE_CURRENT_BINARY_DIR}/${EXEC}"
-    DESTINATION ${CMAKE_INSTALL_BINDIR}
-    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+  PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/${EXEC}"
+  DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 configure_file(
-    ${DESKTOP_FILE_NAME}.in
-    ${CMAKE_CURRENT_BINARY_DIR}/${DESKTOP_FILE_NAME}
+  ${DESKTOP_FILE_NAME}.in
+  ${CMAKE_CURRENT_BINARY_DIR}/${DESKTOP_FILE_NAME}
 )
 
 install(
-    FILES ${CMAKE_CURRENT_BINARY_DIR}/${DESKTOP_FILE_NAME}
-    DESTINATION ${DESKTOP_DIR} RENAME ${APP_NAME}.desktop
+  FILES ${CMAKE_CURRENT_BINARY_DIR}/${DESKTOP_FILE_NAME}
+  DESTINATION ${DESKTOP_DIR} RENAME ${APP_NAME}.desktop
 )
 
 install(
-	FILES "gui/images/${ICON_FILE}"
-	DESTINATION ${CMAKE_INSTALL_DATADIR}/${APP_NAME}
+  FILES "gui/images/${ICON_FILE}"
+  DESTINATION ${CMAKE_INSTALL_DATADIR}/${APP_NAME}
 )
 
 add_subdirectory(gui)
 add_subdirectory(backend)
 
 add_custom_target(
-    "run"
-    QML2_IMPORT_PATH=${CMAKE_BINARY_DIR}/backend ${CMAKE_BINARY_DIR}/gui/noson-gui --debug
-    DEPENDS NosonAppbackend NosonAppbackend-qmldir
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/gui
+  "run"
+  QML2_IMPORT_PATH=${CMAKE_BINARY_DIR}/backend ${CMAKE_BINARY_DIR}/gui/noson-gui --debug
+  DEPENDS NosonAppbackend NosonAppbackend-qmldir
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/gui
 )
 
 configure_file(
-    ${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in
-    ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake IMMEDIATE @ONLY
+  ${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake IMMEDIATE @ONLY
 )
 
 add_custom_target(
-    "uninstall"
-    ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake
+  "uninstall"
+  ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake
 )
-
