[debian] add dependency for qttranslations5-l10n

--- a/debian/control
+++ b/debian/control
@@ -43,6 +43,7 @@ Depends: qml-module-qt-labs-settings,
          qtdeclarative5-particles-plugin,
          qtdeclarative5-qtquick2-plugin,
          qtdeclarative5-window-plugin,
+         qttranslations5-l10n,
          libqt5svg5,
          zlib1g,
          openssl,
