--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop-application">
   <id>@APP_ID@</id>
-  <launchable type="desktop-id">@APP_NAME@.desktop</launchable>
+  <launchable type="desktop-id">@APP_ID@.desktop</launchable>
   <name>@APP_NAME@</name>
   <project_license>GPL-3.0-only</project_license>
   <developer_name>Jean-Luc Barriere</developer_name>
