--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2018-06-06" version="3.4.2"/>
     <release date="2018-06-05" version="3.4.1"/>
     <release date="2018-06-03" version="3.4.0"/>
     <release date="2018-06-02" version="3.3.8"/>
