--- a/noson-app.in
+++ b/noson-app.in
@@ -1,4 +1,4 @@
-#!/usr/bin/env bash
+#!/bin/bash
 [ "--cli" = "$1" ] && shift && exec @NOSON_CLI@ $@
 export QML2_IMPORT_PATH=@PLUGINS_DIR@
 exec @NOSON_GUI@ $@
