sync upstream lib noson (1.8.0)

--- a/backend/lib/noson/noson/src/local_config.h.in
+++ b/backend/lib/noson/noson/src/local_config.h.in
@@ -29,4 +29,13 @@
 #undef LIBVERSION
 #define LIBVERSION "@NOSON_LIB_VERSION@"
 
+#undef LIBVERSION_MAJOR
+#define LIBVERSION_MAJOR @noson_VERSION_MAJOR@
+
+#undef LIBVERSION_MINOR
+#define LIBVERSION_MINOR @noson_VERSION_MINOR@
+
+#undef LIBVERSION_PATCH
+#define LIBVERSION_PATCH @noson_VERSION_PATCH@
+
 #endif	/* LOCAL_CONFIG_H */
