--- a/backend/lib/noson/noson/noson.pc.in
+++ b/backend/lib/noson/noson/noson.pc.in
@@ -1,10 +1,10 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=${prefix}/include
+includedir=@includedir@
 
-Name: conos
+Name: noson
 Description: C++ library to control sonos player
-Version: @VERSION@
+Version: @noson_VERSION@
 Libs: -L${libdir} -lnoson
 Cflags: -I${includedir}
