--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -1,8 +1,18 @@
 cmake_minimum_required(VERSION 3.1.0)
 
+find_package(noson QUIET)
+if(NOT noson_FOUND)
+    set(noson_INCLUDE_DIRS
+        "${CMAKE_BINARY_DIR}/backend/lib/noson/noson/public/noson"
+        "${CMAKE_BINARY_DIR}/backend/lib/noson/noson/public"
+    )
+    set(noson_LIBRARIES noson)
+endif()
+
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_BINARY_DIR}/../backend/lib/noson/noson/include
+    ${CMAKE_SOURCE_DIR}/backend/lib/noson/noson/src
+    ${noson_INCLUDE_DIRS}
 )
 
 set(
@@ -12,10 +22,14 @@ set(
 
 add_executable (noson-cli ${noson-cli-sources})
 
+if(NOT noson_FOUND)
+    add_dependencies(noson-cli noson)
+endif()
+
 if(MSVC)
-  target_link_libraries (noson-cli noson ws2_32)
+	target_link_libraries (noson-cli ${noson_LIBRARIES} ws2_32)
 else()
-  target_link_libraries (noson-cli noson)
+	target_link_libraries (noson-cli ${noson_LIBRARIES})
 endif()
 
 install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/noson-cli
