--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2018-07-02" version="3.6.1"/>
     <release date="2018-06-28" version="3.6.0"/>
     <release date="2018-06-24" version="3.5.0"/>
     <release date="2018-06-11" version="3.4.4"/>
