--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2018-07-04" version="3.6.3"/>
     <release date="2018-07-03" version="3.6.2"/>
     <release date="2018-07-02" version="3.6.1"/>
     <release date="2018-06-28" version="3.6.0"/>
