--- a/backend/lib/openssl/crypto/CMakeLists.txt
+++ b/backend/lib/openssl/crypto/CMakeLists.txt
@@ -220,7 +220,11 @@ add_submodule ( x509v3 v3_bcons.c v3_bitst.c v3_conf.c v3_extku.c v3_ia5.c v3_li
 add_submodule ( . EXHEADERS crypto.h opensslv.h opensslconf.h ebcdic.h symhacks.h
   ossl_typ.h )
 
-add_library( crypto ${LIBSRC} ${OBJECTS_SRC} )
+if( ANDROID )
+  add_library( crypto SHARED ${LIBSRC} ${OBJECTS_SRC} )
+else()
+  add_library( crypto ${LIBSRC} ${OBJECTS_SRC} )
+endif()
 
 if( WIN32 AND NOT CYGWIN )
   target_link_libraries( crypto ws2_32 crypt32 )
