bad import for the target run
Also disable debug output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,7 @@ endif()
 
 add_custom_target(
   "run"
-  QML2_IMPORT_PATH=${CMAKE_BINARY_DIR}/backend ${CMAKE_BINARY_DIR}/gui/noson-gui --debug
+  QML2_IMPORT_PATH=${CMAKE_BINARY_DIR}/backend/qml ${CMAKE_BINARY_DIR}/gui/noson-gui
   DEPENDS NosonAppbackend NosonAppbackend-qmldir
   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/gui
 )
