--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2018-07-23" version="3.6.6"/>
     <release date="2018-07-22" version="3.6.5"/>
     <release date="2018-07-09" version="3.6.4"/>
     <release date="2018-07-04" version="3.6.3"/>
