android: build signed apk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,8 @@ if(ANDROID)
       BUILDTOOLS_REVISION ${QT_ANDROID_SDK_BUILDTOOLS_REVISION}
       DEPENDS ssl crypto
       PLUGINS ${CMAKE_BINARY_DIR}/backend/qml
+      KEYSTORE ${KEYSTORE_FILE} ${KEYSTORE_ALIAS}
+      KEYSTORE_PASSWORD ${KEYSTORE_PASSWORD}
   )
 else()
   add_subdirectory(cli)
