add new index category to browse composers

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -72,6 +72,8 @@ set(
     modules/NosonApp/allservicesmodel.h
     modules/NosonApp/alarmsmodel.cpp
     modules/NosonApp/alarmsmodel.h
+    modules/NosonApp/composersmodel.cpp
+    modules/NosonApp/composersmodel.h
 )
 
 add_library(NosonAppbackend MODULE
