--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2018-08-06" version="3.7.2"/>
     <release date="2018-08-04" version="3.7.1"/>
     <release date="2018-07-31" version="3.7.0"/>
     <release date="2018-07-25" version="3.6.7"/>
