new plugin thumbnailer last.fm

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -14,3 +14,4 @@ endif()
 set(QML_IMPORT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/qml)
 
 add_subdirectory(NosonApp)
+add_subdirectory(NosonThumbnailer)
